Migration in next js and added functionalities
Converted the full code using next js.The main file for pc details becomes agent.js.Also both server and pc showing the system monitoring details.
For that run node agent.js & npm run dev & output available on 3000

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "server-status",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel static/SystemMonitor.jsx --dist-dir static/dist",
-    "build": "parcel build static/SystemMonitor.jsx --dist-dir static/dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -15,18 +17,32 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/naiomit4-design/Server-Status/issues"
   },
   "homepage": "https://github.com/naiomit4-design/Server-Status#readme",
-  "devDependencies": {
-    "parcel": "^2.16.1"
-  },
   "dependencies": {
+    "axios": "^1.13.2",
+    "express": "^5.1.0",
     "lucide-react": "^0.554.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "recharts": "^3.5.0"
+    "next": "16.0.4",
+    "ping": "^1.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "recharts": "^3.5.0",
+    "systeminformation": "^5.27.11"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.4",
+    "parcel": "^2.16.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
