--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,41 @@
-# Python
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.venv/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Node.js
-node_modules/
-package-lock.json
-index.js.map
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# Parcel
-.parcel-cache/
-dist/
+# testing
+/coverage
 
-# Logs and temporary files
-*.log
-error.log
-data.json
+# next.js
+/.next/
+/out/
 
-# IDE and OS files
-.vscode/
-.idea/
+# production
+/build
+
+# misc
 .DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# env files (can opt-in for committing if needed)
+.env*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
